# _nix

./: .cz.toml  .editorconfig  .gitignore  .luarc.json  .neoconf.json  .pre-commit-config.yaml  .rumdl.toml  .taplo.toml  AGENTS.md  CHANGELOG.md  biome.json  cheatsheet_atomic.md  cliff.toml  default.nix  flake-file.nix  flake.nix  input-overrides.nix  inputs.nix  justfile  kdlfmt.kdl  project.janet  pyproject.toml  sgconfig.yml  statix.toml  unflake.nix  xaa
_assets/shaders/: creation.glsl  starnest.glsl  warp.glsl
_installer/: .gitignore  README.md  main.py  pyproject.toml
_installer/src/coisas/: __init__.py  cli.py  command.py  repository.py
_installer/src/installer/: __init__.py  app.py  context.py  install.py  steps.py
_installer/tests/fixtures/test_flake/: disko.nix  flake.nix
_installer/tests/integration/: evaluate_disko.test.py  test_evaluate_disko.py
_installer/tests/unit/: commands.test.py  repository.test.py  steps.test.py  test_commands.py  test_repository.py  test_steps.py
_lib/: base.nix  default.nix  disko.nix  options.nix  services.nix  units.nix  with_config.nix
_lib/disko/: default.nix
_lib/hosts/: base.nix
_lib/modules/: default.nix
_lib/options/: default.nix
_lib/secrets/: with_config.nix
_lib/services/: default.nix
_lib/tests/: default.nix
_lib/units/: default.nix
_modules/: _vm_bundle_contract.nix  options.nix  public.nix  secrets.nix  ssh.nix  vm.nix
_scripts/: _utils.fish  checks.fish  clean.fish  format.fish  format.janet  install.fish  lavpc-resize-swap.fish  update.fish
_scripts/frag/: pyproject.toml
_scripts/frag/scripts/: smoke_verify.py
_scripts/frag/src/frag/: __init__.py  bootstrap.py  cli.py  docker_invoke.py  docker_runtime.py  exceptions.py  image_assets.py  profiles.py  prompts.py  runtime_contract.py  shared_assets_contract.py  ui.py  verification.py
_scripts/frag/tests/: bootstrap.test.py  cli.test.py  docker_invoke.test.py  docker_runtime.test.py  image_assets.test.py  profiles.test.py  runtime_contract.test.py  shared_assets_contract.test.py  test_bootstrap.py  test_cli.py  test_docker_invoke.py  test_docker_runtime.py  test_image_assets.py  test_profiles.py  test_runtime_contract.py  test_shared_assets_contract.py  test_verification.py  verification.test.py
_scripts/storage/: storage-graveyard-prune.py
_scripts/vm/: pyproject.toml
_scripts/vm/src/vm_wrapper/: __init__.py  bundle.py  cli.py  nix_runner.py
_scripts/vm/tests/: bundle.test.py  cli.test.py  conftest.py  nix_runner.test.py  test_bundle.py  test_cli.py  test_nix_runner.py
docs/: azure-vpn.md
docs/logs/: README.md
docs/plans/: 2026-02-27-installer-rework-design.md  2026-02-27-installer-rework-plan.md
docs/wip/: backups.md  deployment.md  isolation.md  isolation_server.md  nixos_containers_spec.md  nixos_containers_spec_v2.md  nixos_containers_spec_v2_digest.md  nixos_containers_spec_v2_plan.md  packaging.md  remote-builders.md  storage_fix_plan.md  storage_review.md
globals/: default.nix  dns.nix  hosts.nix  units.nix
hardware/: lavpc.nix  testvm.nix  testvm_arm.nix  tyrant.nix
hardware/_disko/: lavpc.nix  lavpc_v2.nix  server_1.nix  testservervm.nix  testvm_btrfs.nix
hardware/_modules/: facter.nix  grub.nix  luks.nix  nvidia.nix
hardware/disko/: lavpc.nix  lavpc_v2.nix  server_1.nix  test_bcachefs.nix  testvm_bcachefs.nix  testvm_btrfs.nix  tesvm_btrfs.nix
hardware/lavpc/: default.nix  disko.nix
hardware/modules/: grub.nix  pipewire.nix
hardware/temperance/: default.nix  disko.nix
hardware/testservervm/: default.nix  disko.nix
hardware/testvm/: default.nix
hardware/tyrant/: default.nix  disko.nix
lib/: base.nix  converters.nix  default.nix  disko.nix  modules.nix  podman.nix  services.nix
lib/options/: default.nix
lib/outputs/: backups-checks.nix  deploy-checks.nix  octodns.nix  octodns_config.nix
lib/secrets/: base.nix
lib/tests/: default.nix
lib/units/: endpoint.nix
meta/: _loader.nix  _schema.nix  default.nix  modules.nix
meta/kanata/: default.nix
microvms/postgres/: default.nix
modules/: den.nix  hosts.nix  iso.nix  namespaces.nix  options.nix  public.nix  secrets.nix
modules/_packages/: default.nix
modules/aspects/: default-providers.nix  defaults.nix  desktop-providers.nix  desktop.nix  units.nix
modules/hosts/: iso.nix  lavpc.nix  temperance.nix  tyrant.nix
modules/outputs/: apps.nix  channels.nix  checks.nix  compat.nix  deploy.nix  dev_shells.nix  metadata.nix  optnix.nix  packages.nix
npins/: default.nix  sources.json
outputs/: default.nix
outputs/apps/: default.nix
systems/: astral.nix  plank.nix  tyrant.nix
template/: .gitignore  flake.nix  secrets.yaml  sops.yaml
tests/: _sops_stub.nix  base_node.nix  default.nix  pyproject.toml
tests/backup_local/: default.nix  node.nix
tests/backup_promotion/: coordinator.nix  default.nix  storage.nix
tests/common/: __init__.py  base_node.nix
tests/dns/: default.nix  probe.nix  resolver.nix
tests/network_namespaces/: default.nix  host.nix  probe.nix
tests/nixos/: __init__.py
tests/nixos/ashrwm/: config.janet  default.nix  node.nix  script.py
tests/nixos/azure_vpn_lab/: __init__.py  client.nix  default.nix  gateway.nix  resource.nix  script.py
tests/nixos/backup_local/: node.nix  script.py
tests/nixos/backup_promotion/: coordinator.nix  script.py  storage.nix
tests/nixos/dns/: probe.nix  resolver.nix  script.py
tests/nixos/network_namespaces/: default.nix  host.nix  probe.nix  script.py
tests/nixos/vm_bundle_contract/: node.nix  script.py
tests/nixos/wireguard_tunnels/: isolated.nix  probe.nix  relay.nix  script.py
tests/scripts/: default.nix  pyproject.toml
tests/scripts/src/my_nix_tests/: __init__.py  backup_local.py  backup_promotion.py  dns.py  network_namespaces.py  vm_bundle_contract.py  wireguard_tunnels.py
tests/vm/: _test.py  default.nix  node.nix  test.py
tests/vm_bundle_contract/: default.nix  node.nix
tests/wireguard_tunnels/: default.nix  isolated.nix  probe.nix  relay.nix
tmp-docs/: gopeed_replacement_plan.md
users/: README.md  lav.nix  plankton.nix  tyrant.nix
(+1210 files in other folders)
