[project]
  name            = "my-nix"
  version         = "0.1.0"
  requires-python = ">=3.14"
  dependencies    = ["nix-machine-protocol"]

[tool.uv.sources]
  nix-machine-protocol = { git = "https://github.com/Gastove/nix-machine-protocol" }

[tool.ruff]
  line-length    = 78
  indent-width   = 2
  target-version = "py314"
  [tool.ruff.format]
    docstring-code-format = true

  [tool.ruff.lint]
    select = [
      "A",
      "ASYNC",
      "B",
      "BLE",
      "C4",
      "C90",
      "D",
      "DTZ",
      "E",
      "EM",
      "ERA",
      "F",
      "FBT",
      "FLY",
      "FURB",
      "G",
      "I",
      "ICN",
      "INP",
      "INT",
      "ISC",
      "LOG",
      "N",
      "NPY",
      "PERF",
      "PGH",
      "PIE",
      "PL",
      "PT",
      "PTH",
      "PYI",
      "Q",
      "RET",
      "RSE",
      "RUF",
      "S",
      "SIM",
      "SLF",
      "SLOT",
      "T10",
      "T20",
      "TC",
      "TID",
      "TRY",
      "UP",
      "W",
      "YTT",
    ]
    ignore = [
      "D203",
      "D213",
      "E501",
      "RET504",
      "S101",
      "S307",
      "D100",
      "D101",
      "PGH003",
    ]
    unfixable = ["ERA001", "F401", "F841", "T201", "T203"]

    [tool.ruff.lint.per-file-ignores]
      "{**/*.test.py,tests/nixos/**/*.py,tests/common/**/*.py}" = [
        # omit "invalid module name" errors
        "N999",
        # omit implicit namespace package errors
        "INP001",
        # omit private usage errors
        "SLF001",
        # omit "magic value" errors
        "PLR2004",
      ]
    [tool.ruff.lint.pylint]
      max-branches = 10
      max-locals   = 10

[tool.basedpyright]
  # include                     = ["pkgs/operator-cli/src", "pkgs/operator-core/src"]
  exclude                     = ["**/__pycache__", "**/node_modules", "**/venv", "**/.venv"]
  typeCheckingMode            = "recommended"
  failOnWarnings              = true
  enableReachabilityAnalysis  = true
  analyzeUnannotatedFunctions = true

  # keep "Any" for exceptional cases
  reportExplicitAny = false
  reportAny         = false

  reportUnknownMemberType             = true
  reportUnknownParameterType          = true
  reportUnknownArgumentType           = true
  reportMissingParameterType          = true
  reportImplicitOverride              = true
  reportMissingTypeStubs              = false
  reportUnknownVariableType           = true
  reportMissingSuperCall              = false
  reportImplicitStringConcatenation   = false
  reportCallInDefaultInitializer      = true
  reportUninitializedInstanceVariable = false

  # let ruff handle private usage warnings (so we exclude them on tests)
  reportPrivateUsage = false
