[project]
name = "installer"
version = "0.1.0"
description = "My NixOS installer scripts"
authors = [{ name = "Joao Pedro", email = "vieiraleao2005@gmail.com" }]
requires-python = ">=3.14"
dependencies = ["attrs>=25.4.0", "cyclopts>=4.5.1", "rich>=14.3.2"]

[project.scripts]
installer = "installer:app"

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = ["pytest>=8.0.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["manual: tests that must be run manually (not in CI)"]
addopts = "-m 'not manual'"
