[project]
  name            = "installer"
  version         = "0.1.0"
  description     = "My NixOS installer scripts"
  authors         = [{ name = "Joao Pedro", email = "vieiraleao2005@gmail.com" }]
  requires-python = ">=3.14"
  dependencies    = ["attrs>=25.4.0", "cyclopts>=4.5.1", "rich>=14.3.2"]

  [project.scripts]
    installer = "installer:app"

[build-system]
  requires      = ["uv_build>=0.9.26,<0.10.0"]
  build-backend = "uv_build"

[dependency-groups]
  dev = ["pytest>=8.0.0"]

[tool.pytest.ini_options]
  testpaths     = ["tests"]
  python_files  = ["*.test.py"]
  markers       = ["manual: tests that must be run manually (not in CI)"]
  addopts       = "--import-mode=importlib -m 'not manual'"

[tool.basedpyright]
  # Installer steps intentionally rely on raised failures rather than consuming
  # every command exit code.
  reportUnusedCallResult = false
  # Step implementations must keep the shared protocol signature even when a
  # specific step does not use every parameter.
  reportUnusedParameter = false

  executionEnvironments = [
    # Tests use mock-heavy helpers where localized Any-like flows would add
    # noise without improving signal.
    { root = "tests", reportAny = false, reportExplicitAny = false },
  ]
