[project]
  name            = "my-nix-tests"
  version         = "0.1.0"
  requires-python = ">=3.13"
  dependencies    = ["nix-machine-protocol"]

[build-system]
  requires      = ["uv_build>=0.10.0,<0.12.0"]
  build-backend = "uv_build"

[tool.uv.build-backend]
  module-name    = ["nixos", "common"]
  module-root    = ""
  source-exclude = ["*.nix"]
  wheel-exclude  = ["*.nix"]

[tool.uv.sources]
  nix-machine-protocol = { git = "https://github.com/Gastove/nix-machine-protocol" }
