[project]
  name            = "frag"
  version         = "0.1.0"
  requires-python = ">=3.14"
  dependencies    = ["attrs", "cyclopts", "questionary", "rich"]

  [project.scripts]
    frag           = "frag.cli:main"
    frag-bootstrap = "frag.bootstrap:main"

[build-system]
  requires      = ["setuptools>=69"]
  build-backend = "setuptools.build_meta"

[tool.setuptools]
  package-dir = { "" = "src" }

  [tool.setuptools.packages.find]
    where = ["src"]

[tool.pytest.ini_options]
  python_files = ["*.test.py"]
  addopts = ["--import-mode=importlib"]
