[project]
  name            = "vm-wrapper"
  version         = "0.1.0"
  requires-python = ">=3.14"
  dependencies    = ["attrs", "cyclopts"]

  [project.scripts]
    vm-launcher = "vm_wrapper.cli:app"

[build-system]
  requires      = ["setuptools>=69"]
  build-backend = "setuptools.build_meta"

[tool.setuptools]
  package-dir = { "" = "src" }

  [tool.setuptools.packages.find]
    where = ["src"]
[tool.pytest.ini_options]
  # Test files use *.test.py naming convention instead of default test_*.py
  python_files = ["*.test.py"]
  addopts      = ["--import-mode=importlib"]
