[project]
name = "my-nix-tests"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = ["nix-machine-protocol"]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
my_nix_tests = ["py.typed"]

[tool.uv.sources]
nix-machine-protocol = { git = "https://github.com/Gastove/nix-machine-protocol" }
